data_duplication_delete